# nocasim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
data/: samples.tsv  samples_mixture.tsv
data/references/: GI.1.fasta  GI.2.fasta  GI.3.fasta  GI.4.fasta  GI.5.fasta  GI.6.fasta  GI.7.fasta  GI.8.fasta  GI.9.fasta  GII.1.fasta  GII.10.fasta  GII.11.fasta  GII.12.fasta  GII.13.fasta  GII.14.fasta  GII.16.fasta  GII.17.fasta  GII.18.fasta  GII.19.fasta  GII.2.fasta  GII.20.fasta  GII.21.fasta  GII.22.fasta  GII.23.fasta  GII.24.fasta  GII.25.fasta  GII.26.fasta  GII.27.fasta  GII.3.fasta  GII.4.fasta  GII.5.fasta  GII.6.fasta  GII.7.fasta  GII.8.fasta  GII.9.fasta
nocasim/: __init__.py  art_runner.py  background.py  capture.py  cli.py  config.py  ct_model.py  duplicate.py  fragment.py  genome.py  mixture.py  output.py  truth.py
scripts/: download_probes.py
tests/: test_art_runner.py  test_background.py  test_capture.py  test_cli_mixture.py  test_ct_model.py  test_duplicate.py  test_fragment.py  test_genome.py  test_mixture.py  test_truth.py
tests/fixtures/: test_probes.fasta  test_reference.fasta
